--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 dashmap = "5.4.0"
 once_cell = "1.17.1"
+probabilistic-collections = "*"
+prost = "0.11.9"
+tonic = "0.9.2"
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
